# IndieStudio

./: .gitignore  AbstractPlayer_8cpp.html  AbstractPlayer_8cpp_source.html  AbstractPlayer_8hpp.html  AbstractPlayer_8hpp_source.html  Animate_8cpp.html  Animate_8cpp_source.html  Animate_8hpp.html  Animate_8hpp_source.html  AudioStream_8cpp.html  AudioStream_8cpp_source.html  AudioStream_8hpp.html  AudioStream_8hpp_source.html  BombBonus_8cpp.html  BombBonus_8cpp_source.html  BombBonus_8hpp.html  BombBonus_8hpp_source.html  Bomb_8cpp.html  Bomb_8cpp_source.html  Bomb_8hpp.html  Bomb_8hpp_source.html  BoundingBox_8cpp.html  BoundingBox_8cpp_source.html  BoundingBox_8hpp.html  BoundingBox_8hpp_source.html  Button_8cpp.html  Button_8cpp_source.html  Button_8hpp.html  Button_8hpp_source.html  CMakeLists.txt  Camera2D_8cpp.html  Camera2D_8cpp_source.html  Camera2D_8hpp.html  Camera2D_8hpp_source.html  Camera3D_8cpp.html  Camera3D_8cpp_source.html  Camera3D_8hpp.html  Camera3D_8hpp_source.html  Camera_8cpp.html  Camera_8cpp_source.html  (+736 more)
.github/workflows/: cmake.yml  deploy.yml
save/: putain.yml  save 4.yml  save_test.yml  saving_data.yml  test.yml  test2.yml  test3.yml  test_end.yml  testing.yml
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  (+88 more)
shared/: IGraphicalLibrary.hpp
shared/Modules/: IAudio.hpp  ICore.hpp  IModels.hpp  IPhysic.hpp  IShapes.hpp  IText.hpp  ITextures.hpp
src/: DynamicLibrary.cpp  DynamicLibrary.hpp  DynamicLibraryException.cpp  DynamicLibraryException.hpp  main.cpp  main.h
src/DynamicLibrary/: DynamicLibrary.cpp  DynamicLibrary.hpp  DynamicLibraryException.hpp
src/Game/: Config.cpp  Config.hpp  GameException.cpp  GameException.hpp  GameObject.cpp  GameObject.hpp  Map.cpp  Map.hpp  Player.cpp  Player.hpp  PlayerAnimation.cpp  PlayerAnimation.hpp
src/Game/Bomb/: Bomb.cpp  Bomb.hpp
src/Game/BombBonus/: BombBonus.cpp  BombBonus.hpp
src/Game/Button/: Button.cpp  Button.hpp
src/Game/Crate/: Crates.cpp  Crates.hpp
src/Game/End/: End.cpp  End.hpp
src/Game/Flame/: Flame.cpp  Flame.hpp
src/Game/FlashingText/: FlashingText.cpp  FlashingText.hpp
src/Game/GameScene/: GameScene.cpp  GameScene.hpp
src/Game/Image/: Image.cpp  Image.hpp
src/Game/LoadingScreen/: LoadingScreen.cpp  LoadingScreen.hpp
src/Game/MainMenu/: MainMenu.cpp  MainMenu.hpp
src/Game/Music/: Music.cpp  Music.hpp
src/Game/Parralax/: Parralax.cpp  Parralax.hpp
src/Game/QuitGame/: QuitGame.hpp
src/Game/RangeBonus/: RangeBonus.cpp  RangeBonus.hpp
src/Game/Save/: Save.cpp  Save.hpp
src/Game/SceneManager/: SceneManager.cpp  SceneManager.hpp
src/Game/SpeedBonus/: SpeedBonus.cpp  SpeedBonus.hpp
src/Game/SplashScreen/: SplashScreen.cpp  SplashScreen.hpp
src/Game/SpriteSheetPlayer/: SpriteSheetPlayer.cpp  SpriteSheetPlayer.hpp
src/Game/StarBonus/: StarBonus.cpp  StarBonus.hpp
src/Game/StateImage/: StateImage.cpp  StateImage.hpp
src/Game/TestScene/: TestScene.cpp  TestScene.hpp
src/Game/UserConfig/: UserConfig.cpp  UserConfig.hpp
src/RayLib/: CMakeLists.txt  Camera.cpp  Camera.hpp  Cursor.cpp  Cursor.hpp  Drawing.cpp  Drawing.hpp  InputGamepad.cpp  InputGamepad.hpp  InputKeyboard.cpp  InputKeyboard.hpp  InputMouse.cpp  InputMouse.hpp  Manager3D.cpp  Manager3D.hpp  RayLib.cpp  RayLib.hpp  RayLibCore.cpp  RayLibCore.hpp  RayLibModel.cpp  RayLibModel.hpp  RayLibModels.cpp  RayLibModels.hpp  RayLibPhysac.cpp  RayLibPhysac.hpp  RayLibRaudio.cpp  RayLibRaudio.hpp  RayLibShapes.cpp  RayLibShapes.hpp  RayLibText.cpp  RayLibText.hpp  RayLibTextures.cpp  RayLibTextures.hpp  Window.cpp  Window.hpp
src/RayLib/Audio/AudioStream/: AudioStream.cpp  AudioStream.hpp
src/RayLib/Audio/Music/: Music.cpp  Music.hpp
src/RayLib/Audio/Sound/: Sound.cpp  Sound.hpp
src/RayLib/Model/Animate/: Animate.cpp  Animate.hpp
src/RayLib/Model/Collision/: Collision.cpp  Collision.hpp
src/RayLib/Model/Map/: Map.cpp  Map.hpp
src/RayLib/Model/SimpleModel/: SimpleModel.cpp  SimpleModel.hpp
src/RayLib/Shapes/: Shapes.h
src/RayLib/Shapes/Circle/: Circle.cpp  Circle.hpp
src/RayLib/Shapes/Collision/: Collision.cpp  Collision.hpp
src/RayLib/Shapes/Ellipse/: Ellipse.cpp  Ellipse.hpp
src/RayLib/Shapes/Line/: Line.cpp  Line.hpp
src/RayLib/Shapes/Pixel/: Pixel.cpp  Pixel.hpp
src/RayLib/Shapes/Poly/: Poly.cpp  Poly.hpp
src/RayLib/Shapes/Rectangle/: Rectangle.cpp  Rectangle.hpp
src/RayLib/Shapes/Ring/: Ring.cpp  Ring.hpp
src/RayLib/Shapes/Triangle/: Triangle.cpp  Triangle.hpp
src/RayLib/Text/: Text.cpp  Text.hpp
src/RayLib/Texture/: Texture.cpp  Texture.hpp
src/Types/BoundingBox/: BoundingBox.cpp  BoundingBox.hpp
src/Types/Camera/: Camera2D.cpp  Camera2D.hpp  Camera3D.cpp  Camera3D.hpp
src/Types/Color/: Color.cpp  Color.hpp
src/Types/Image/: Image.cpp  Image.hpp
src/Types/Matrix/: Matrix.cpp  Matrix.hpp
src/Types/Rectangle/: Rectangle.cpp  Rectangle.hpp
src/Types/RenderTexture/: RenderTexture.cpp  RenderTexture.hpp  Texture.cpp  Texture.hpp
src/Types/Texture/: Texture.cpp  Texture.hpp
src/Types/Vector/: Vector.hpp
src/Types/Vector2/: Vector2.cpp  Vector2.hpp
src/Types/Vector3/: Vector3.cpp  Vector3.hpp
src/Types/Vector4/: Vector4.cpp  Vector4.hpp
src/players/: AbstractPlayer.cpp  AbstractPlayer.hpp  Player.cpp  Player.hpp
src/players/Bomberman/: CMakeLists.txt  bomberman.cpp
src/players/Default/: CMakeLists.txt  default.cpp  default.hpp
src/players/Duck/: CMakeLists.txt  duck.cpp  duck.hpp
src/players/Girl/: CMakeLists.txt  girl.cpp  girl.hpp
src/players/Steve/: CMakeLists.txt  steve.cpp  steve.hpp
src/players/default/: CMakeLists.txt  default.cpp  default.hpp
tests/: CMakeLists.txt  google_test.cpp
(+23 files in other folders)
